2011-02-15  Sam Weinig  <sam@webkit.org>

Reviewed by Darin Adler.

        Crash loading fast/loader/empty-embed-src-attribute.html
        <rdar://problem/9005541>
        https://bugs.webkit.org/show_bug.cgi?id=54483

        Add the ability to encode/decode and empty ResourceRequest.

        * Shared/mac/WebCoreArgumentCodersMac.mm:
        (CoreIPC::encodeResourceRequest):
        (CoreIPC::decodeResourceRequest):
        (CoreIPC::decodeResourceResponse): Add missing false check for the
        decode step.
        * Shared/win/WebCoreArgumentCodersWin.cpp:
        (CoreIPC::encodeResourceRequest):
        (CoreIPC::decodeResourceRequest):
        (CoreIPC::decodeResourceResponse): Add missing false check for the
        decode step.


Canonical link: https://commits.webkit.org/68596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78600 268f45cc-cd09-0410-ab3c-d52691b4dbfc